--- a/Prototype_VoZeMan/src/view/prototype2.fxml
+++ b/Prototype_VoZeMan/src/view/prototype2.fxml
@@ -8,11 +8,14 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
 
 <AnchorPane style="-fx-background-color: #ffffff;" stylesheets="@styles/application.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller.Controller">
    <children>
@@ -34,7 +37,7 @@
                      </HBox.margin>
                   </Button>
                   <Button fx:id="menuNotes" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-not-active" text="Notizen" textFill="WHITE" />
-                  <Button fx:id="menuRoomes" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-active" text="Raumbelegung" textFill="WHITE" />
+                  <Button fx:id="menuRoomes" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-not-active" text="Raumbelegung" textFill="WHITE" />
                   <Button fx:id="menuMensa" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-not-active" text="Mensa" textFill="WHITE" />
                   <Button fx:id="menuLecturers" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-not-active" text="Dozenten" textFill="WHITE" />
                   <Button fx:id="menuSettings" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#changeMenu" prefHeight="36.0" prefWidth="166.0" styleClass="btn-menu-not-active" text="Einstellungen" textFill="WHITE" />
@@ -101,10 +104,30 @@
                   </VBox>
                </children>
             </HBox>
+            <VBox fx:id="mainWindowForRoomes" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0">
+               <children>
+                  <TextField fx:id="RoomesWindowSearchField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="680.0" promptText="Hier Raum suchen" />
+                  <ImageView fx:id="RoomesWindowImageView" fitHeight="600.0" fitWidth="680.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@img/dhbw-plan.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </VBox>
+            <Pane fx:id="mainWindowForRapla" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="680.0">
+               <children>
+                  <WebView fx:id="raplaWindowWebView" minHeight="-Infinity" minWidth="-Infinity" prefWidth="680.0" />
+               </children>
+            </Pane>
          </children>
       </Pane>
       <Pane fx:id="quickNotesPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="280.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="110.0">
          <children>
+            <Separator maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="0.0">
+               <padding>
+                  <Insets right="15.0" />
+               </padding>
+            </Separator>
             <VBox fx:id="btnSaveNotes" alignment="TOP_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="280.0">
                <children>
                   <Label fx:id="quickNotesLabel" alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="280.0" text="Quick Notes" textFill="#2a2f33">
