--- a/VoZeMan_V1/src/application/client/style.css
+++ b/VoZeMan_V1/src/application/client/style.css
@@ -71,17 +71,6 @@
 	-fx-underline: true;
 }
 
-.label-settings {
-	-fx-font-size: 12pt;
-	-fx-font-family: "Century Gothic";
-}
-
-.savedLabel {
-	-fx-font-size: 8pt;
-	-fx-font-family: "Century Gothic";
-	-fx-text-fill:green;
-	-fx-font-style:italic;
-}
 
 .textfield-notes {
     -fx-background-color: -fx-control-inner-background;
@@ -150,4 +139,21 @@
 .textarea-lecturer {
 	-fx-font-size: 12pt;
 	-fx-font-family: "Century Gothic";
+}
+
+.label-settings {
+	-fx-font-size: 12pt;
+	-fx-font-family: "Century Gothic";
+}
+.savedLabel {
+	-fx-font-size: 12pt;
+	-fx-font-family: "Century Gothic";
+	-fx-text-fill:green;
+	-fx-font-style:italic;
+}
+
+.btn-signIn {
+	-fx-text-fill: #ffffff;
+	-fx-font-family: "Century Gothic";
+	-fx-font-size: 8pt;
 }
