--- a/VoZeMan_V1/src/application/content/settings/Settings.fxml
+++ b/VoZeMan_V1/src/application/content/settings/Settings.fxml
@@ -4,60 +4,68 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="gridPaneForSettings" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.settings.SettingsController">
+<GridPane fx:id="gridPaneForSettings" prefHeight="600.0" prefWidth="800.0" styleClass="bg-grey" stylesheets="@../../client/style.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.content.settings.SettingsController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="535.0000305175781" minWidth="10.0" prefWidth="357.59998779296876" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="59.60001220703123" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="82.79998779296875" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="535.0000305175781" minWidth="10.0" prefWidth="130.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="481.9999755859375" minWidth="10.0" prefWidth="477.4000122070313" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="102.99997558593748" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.4000244140625" minWidth="10.0" prefWidth="83.80002441406248" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="44.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="38.0" minHeight="0.0" prefHeight="38.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="67.20001220703125" minHeight="10.0" prefHeight="66.39999389648438" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="57.59999389648439" minHeight="10.0" prefHeight="43.20000610351562" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="473.19999809265136" minHeight="10.0" prefHeight="293.0000244140625" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveRaplaLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-         <styleClass>
-            <String fx:value="buttonsInWindows" />
-            <String fx:value="bg-lightred" />
-         </styleClass>
-      </Button>
-      <TextField fx:id="enterRaplaLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <Label fx:id="raplaLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Hier einen gültigen RAPLA-Link eintragen:" GridPane.halignment="LEFT">
+      <Label fx:id="settingsWindowNiceLabel" prefHeight="800.0" prefWidth="600.0" styleClass="notes-page" stylesheets="@../../client/style.css" GridPane.columnIndex="1" GridPane.rowIndex="6">
+         <GridPane.margin>
+            <Insets right="-103.0" top="-280.0" />
+         </GridPane.margin>
+         <padding>
+            <Insets top="5.0" />
+         </padding>
+      </Label>
+      <PasswordField fx:id="enterMoodlePasswordPasswordfield" prefHeight="31.0" prefWidth="478.0" promptText="Passwort" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets top="26.0" />
+         </GridPane.margin>
+      </PasswordField>
+      <TextField fx:id="enterMoodleUserTextfield" prefHeight="25.6" prefWidth="475.0" promptText="nachname.vorname@dh-karlsruhe.de" styleClass="label-settings" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+      <Label fx:id="moodleSignInLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Anmeldedaten für moodle und Dualis:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
+      <Label fx:id="raplaLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Hier einen gültigen RAPLA-Link eintragen:" GridPane.columnIndex="1" GridPane.halignment="LEFT">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
+         <padding>
+            <Insets top="3.0" />
+         </padding>
       </Label>
-      <Label fx:id="moodleLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Hier einen gültigen moodle-Link eintragen:" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-      <Label fx:id="dualisLinkSettingsLabel" prefHeight="18.0" prefWidth="400.0" styleClass="label-settings" text="Hier einen gültigen Dualis-Link eintragen:" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
-      <TextField fx:id="enterMoodleLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-      <TextField fx:id="enterDualisLinkSettingsTextfield" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="25.6" prefWidth="348.0" GridPane.rowIndex="5" GridPane.valignment="TOP" />
-      <Button fx:id="saveMoodleLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveMoodleLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="TOP">
+      <TextField fx:id="enterRaplaLinkSettingsTextfield" prefHeight="25.6" prefWidth="475.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+      <Button fx:id="signInMoodleButton" maxHeight="-Infinity" minHeight="-Infinity" mnemonicParsing="false" onAction="#signInMoodle" prefHeight="24.0" prefWidth="94.0" text="Anmelden" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <styleClass>
+            <String fx:value="btn-signIn" />
+            <String fx:value="bg-lightred" />
+         </styleClass>
+      </Button>
+      <Button fx:id="saveRaplaLinkSettingButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveRaplaLink" prefHeight="27.0" prefWidth="55.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
          <styleClass>
             <String fx:value="buttonsInWindows" />
             <String fx:value="bg-lightred" />
          </styleClass>
       </Button>
-      <Button fx:id="saveDualisLinkSettingsButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveDualisLink" prefHeight="24.0" prefWidth="55.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="TOP">
-         <styleClass>
-            <String fx:value="buttonsInWindows" />
-            <String fx:value="bg-lightred" />
-         </styleClass>
-      </Button>
-      <Label fx:id="savedRaplaLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-      <Label fx:id="savedMoodleLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-      <Label fx:id="savedDualisLinkLabel" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="TOP" />
+      <Label fx:id="savedRaplaLinkLabel" alignment="CENTER" prefHeight="25.0" prefWidth="50.0" styleClass="savedLabel" text="saved!" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
    </children>
    <padding>
-      <Insets left="5.0" />
+      <Insets bottom="5.0" top="5.0" />
    </padding>
 </GridPane>
